Register on eureka naming-server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.port=8100
 
 #spring cloud config
 spring.config.import=optional:configserver:
+
+#naming-server
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
